# fire-visualizer

./: README.md  author.sh
hotspots-api/: .env  README.md  build.sh  pyproject.toml
hotspots-api/dockersetup/: .env  docker-compose.yml
hotspots-api/src/hotspots_api/: config.py
visualizer/: README.md  build.sh  pyproject.toml
