[tool.poetry]
name = "hotspots-api"
version = "0.1.0"
description = ""
authors = ["ncortim <ncortim@proton.me>"]
readme = "README.md"
packages = [{include = "hotspots_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.115.4"
redis = "5.2.0"
sqlalchemy = "2.0.36"
shapely = "2.0.6"
geoalchemy2 = "0.15.2"
pydantic-settings = "2.6.0"
psycopg2-binary = "2.9.10"
geojson-pydantic = "1.1.2"
pandas = "2.2.3"
geopandas = "1.0.1"
python-multipart = "0.0.16"
uvicorn = "0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
