[tool.poetry]
name = "visualizer"
version = "0.1.0"
description = ""
authors = ["ncortim <ncortim@proton.me>"]
readme = "README.md"
packages = [{include = "visualizer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "3.0.3"
python-dotenv = "1.0.1"
requests = "2.32.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
